[project]
name = "agents-mem-py"
version = "1.0.0"
description = "Python rewrite of agents-mem with 4-layer architecture"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "ollama>=0.1.0",
    "jinja2>=3.1.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "pyright>=0.1.0",
]

[project.scripts]
agents-mem-py = "agents_mem.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agents_mem"]

[tool.hatch.build.targets.sdist]
include = ["src/agents_mem"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "--cov=agents_mem --cov-report=html"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.11"
